arm/dts: Thea: override camera clock for P1B/P2
Front camera in Thea P1B uses MCLK1 where as Thea P1A & Titan
Uses MCLK0. Enalbing facility to override the product specific
clock from the device tree.

Removing vddio_disp_vreg configuration which was configured
wrongly from P1A times

Change-Id: Ia5585c48574ab081669f26855bfb96b873a1cd80
Signed-off-by: VijayKumar Gn <gxnf38@motorola.com>
Reviewed-on: http://gerrit.mot.com/662805
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Sudharsan Yettapu <sudharsan.yettapu@motorola.com>
Reviewed-by: Jian-Jun Fan <stevenfan@motorola.com>
Reviewed-by: Christopher Fries <cfries@motorola.com>
SLTApproved: Christopher Fries <cfries@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/msm8926-thea-common.dtsi
+++ b/arch/arm/boot/dts/msm8926-thea-common.dtsi
@@ -34,11 +34,6 @@
 	gpio = <&msmgpio 69 0x0>;
 };
 
-&vddio_disp_vreg {
-	/delete-property/ gpio;
-	gpio = <&msmgpio 114 0x0>;
-};
-
 &imx132 {
 	/delete-property/ gpios;
 	gpios = <&msmgpio 27 0>,
@@ -64,5 +59,11 @@
 	bmm050@13 {
 		/delete-property/ bmm,place;
 		bmm,place = <0>;
+	};
+};
+
+/ {
+	chosen {
+		mmi,clock_override = <0x01>;
 	};
 };
