arm: msm: mmi: devicetree clock overriding for 8x26
Add mmi,clock_override device tree for overriding the msm clock.
The logic is inspired from the MMI implemenation used in 8960
products.

Requirement:
Titan & Thea P1A uses MCLK0 for Front Camera. Where as Thea P1B
uses MCLK1.

TODO:
Currently new clocks are defined in the driver code, this
need to be moved to Device tree to support proper generic way
1. Removing of static data strucutre mmi_msm_clocks_8226
2. Using device tree to pass overriding clock & values

Change-Id: Ie879cfd1a933a293713b9879e12b020c328c0c2b
Signed-off-by: VijayKumar Gn <gxnf38@motorola.com>
Reviewed-on: http://gerrit.mot.com/664122
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Sudharsan Yettapu <sudharsan.yettapu@motorola.com>
SLTApproved: Christopher Fries <cfries@motorola.com>
Reviewed-by: Christopher Fries <cfries@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -3157,6 +3157,14 @@ config MMI_MSM_PINMUX
 	  Provides capability for reading an OF DT node to provide initial
 	  configuration of GPIO MUX settings on MSM chip families.
 
+config MMI_MSM_CLOCK
+	depends on ARCH_MSM
+	default n
+	bool "Motorola Mobility MSM OF DTS Clock Driver"
+	help
+	  Provides capability for reading an OF DT node to override Clock
+	  specific to MMI product on MSM chip families.
+
 config PM_DEBUG_WAKEUP
 	depends on PM_DEBUG
     default n
