otus: dts: Enable continuous splash entry
Enable continuous splash entry. This is required for bootanimation
to work at bootup.

Change-Id: Ie190d7a65e3d865e4f8cd1adb272f2ff3a4b51f1
Signed-off-by: Ashwin Pathmudi <jfxr63@motorola.com>
Reviewed-on: http://gerrit.mot.com/664432
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Sudharsan Yettapu <sudharsan.yettapu@motorola.com>
Reviewed-by: Varun Shrivastava <varunshrivastava@motorola.com>
Reviewed-by: Bang Nguyen <bangnguyen@motorola.com>
Reviewed-by: Stephen Rossbach <rossbach@motorola.com>
Reviewed-by: Zachary Crosby <zac@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>
SLTApproved: Robert Neely <wrn002@motorola.com>
SLTApproved: Connie Zhao <czhao1@motorola.com>

--- a/arch/arm/boot/dts/msm8610-otus-common.dtsi
+++ b/arch/arm/boot/dts/msm8610-otus-common.dtsi
@@ -37,6 +37,7 @@
 };
 
 &mot_boe_450_qhd_vid_v2 {
+	qcom,cont-splash-enabled;
 	qcom,platform-supply-entry1 {
 		qcom,supply-name = "lcd_vci";
 		qcom,supply-min-voltage = <2850000>;
@@ -62,6 +63,7 @@
 };
 
 &mot_boe_450_qhd_vid_v1 {
+	qcom,cont-splash-enabled;
 	qcom,platform-supply-entry1 {
 		qcom,supply-name = "lcd_vci";
 		qcom,supply-min-voltage = <2850000>;
@@ -87,6 +89,7 @@
 };
 
 &mot_boe_450_qhd_vid_v0 {
+	qcom,cont-splash-enabled;
 	qcom,platform-supply-entry1 {
 		qcom,supply-name = "lcd_vci";
 		qcom,supply-min-voltage = <2850000>;
