ARM: dts: msm: Configure SMB STAT pin for LiQUID8994
GPIO6 serves as SMB STAT IRQ on LiQUID8994.

Change-Id: Ic0426dce33b19f3260ce3fce42271c53250f5182
Signed-off-by: Eugene Yasman <eyasman@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8994-liquid.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-liquid.dtsi
@@ -596,6 +596,14 @@
 		qcom,master-en = <1>;	/* ENABLE GPIO */
 	};
 
+	gpio@c500 { /* GPIO 6 SMB STAT */
+		qcom,mode = <0>;	/* DIGITAL IN */
+		qcom,pull = <5>;	/* NO PULL */
+		qcom,vin-sel = <0>;	/* VPH */
+		qcom,src-sel = <0>;	/* CONSTANT */
+		qcom,master-en = <1>;	/* ENABLE GPIO */
+	};
+
 	gpio@c600 { /* GPIO 7 - NFC_PWR_REQ */
 		qcom,mode = <0>;	/* DIGITAL IN */
 		qcom,pull = <5>;	/* No Pull */
@@ -604,7 +612,7 @@
 		qcom,master-en = <1>;	/* ENABLE GPIO */
 	};
 
-    gpio@c700 { /* GPIO 8 */
+	gpio@c700 { /* GPIO 8 */
 		qcom,mode = <0>;                /* Digital in */
 		qcom,pull = <5>;                /* No PULL */
 		qcom,output-type = <0>;         /* CMOS logic */
