--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -485,6 +485,7 @@ CONFIG_MSM_OCMEM_DEBUG=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_XPU_ERR_FATAL=y
+CONFIG_MSM_CPUSS_DUMP=y
 CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_MSM_TZ_LOG=y
