--- a/drivers/video/msm/mdss/Kconfig
+++ b/drivers/video/msm/mdss/Kconfig
@@ -50,3 +50,9 @@ config FB_MSM_MDSS_PANEL_ALWAYS_ON
 	default n
 	---help---
 	Keep the display panel always on even when device goes to suspend.
+	
+config ASUS_MDSS_DEBUG_UTILITY
+	bool 'ASUS MDSS Debug Utilities for MSM MDSS DSI'
+	default y
+	---help---
+		Many Utilities added for debug.
