arm/dt: 8610: Enable ESD check in device tree
Enable ESD check via register read method.
Signed-off-by: Varun Shrivastava <varunshrivastava@motorola.com>

Change-Id: Id71ea043cd0811fcf442e86f359191f9ea69117f
Reviewed-on: http://gerrit.mot.com/665391
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Zachary Crosby <zac@motorola.com>
Reviewed-by: Bang Nguyen <bangnguyen@motorola.com>
Reviewed-by: Ashwin Kumar Pathmudi <jfxr63@motorola.com>
Reviewed-by: Stephen Rossbach <rossbach@motorola.com>
Reviewed-by: Sudharsan Yettapu <sudharsan.yettapu@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>
SLTApproved: Connie Zhao <czhao1@motorola.com>

--- a/arch/arm/boot/dts/dsi-panel-mot-boe-450-qHD-video.dtsi
+++ b/arch/arm/boot/dts/dsi-panel-mot-boe-450-qHD-video.dtsi
@@ -17,6 +17,8 @@
  *---------------------------------------------------------------------------*/
 &mdss_mdp {
 	mot_boe_450_qhd_vid_v2: qcom,mdss_dsi_mot_boe_450_qhd_video_v2 {
+		qcom,panel-esd-power-mode-chk = <0x9C>;
+
 		qcom,mdss-dsi-panel-name = "mipi_mot_video_boe_qhd_450_v2";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-type = "dsi_video_mode";
@@ -103,6 +105,8 @@
 	};
 
 	mot_boe_450_qhd_vid_v1: qcom,mdss_dsi_mot_boe_450_qhd_video_v1 {
+		qcom,panel-esd-power-mode-chk = <0x9C>;
+
 		qcom,mdss-dsi-panel-name = "mipi_mot_video_boe_qhd_450_v1";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-type = "dsi_video_mode";
@@ -188,6 +192,8 @@
 	};
 
 	mot_boe_450_qhd_vid_v0: qcom,mdss_dsi_mot_boe_450_qhd_video_v0 {
+		qcom,panel-esd-power-mode-chk = <0x9C>;
+
 		qcom,mdss-dsi-panel-name = "mipi_mot_video_boe_qhd_450_v0";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-type = "dsi_video_mode";
