wifi: Intel adaptation to DHD driver
Modify driver to adapt to Intel platforms:
- modify platform driver name
- modify set_power functions
- remove sdio_reset_comm
- modify suspend/resume functions
- removed GScan

Bug: 17134305
Change-Id: I38ca44cabf80ba717e70c49e54179ed901883935
Signed-off-by: Jonathan DE CESCO <jonathan.de.cesco@intel.com>
Signed-off-by: Thierry Strudel <thierry.strudel@intel.com>

--- a/arch/x86/configs/moor_defconfig
+++ b/arch/x86/configs/moor_defconfig
@@ -269,6 +269,9 @@ CONFIG_USB_USBNET=y
 # CONFIG_USB_NET_ZAURUS is not set
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_WIFI_PLATFORM_DATA=y
+CONFIG_BCMDHD=y
+CONFIG_BCMDHD_SDIO=y
+CONFIG_BCM4339=y
 CONFIG_INPUT_SPARSEKMAP=y
 # CONFIG_INPUT_MOUSEDEV is not set
 CONFIG_INPUT_EVDEV=y
