--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -52,9 +52,9 @@ DHDCFLAGS += -DCUSTOM_PNO_EVENT_LOCK_xTIME=10
 DHDCFLAGS += -DMIRACAST_AMPDU_SIZE=8
 
 #Gscan
-DHDCFLAGS += -DGSCAN_SUPPORT
+#DHDCFLAGS += -DGSCAN_SUPPORT
 DHDCFLAGS += -DRTT_SUPPORT
-DHDCFLAGS += -DWL_VENDOR_EXT_SUPPORT
+#DHDCFLAGS += -DWL_VENDOR_EXT_SUPPORT
 #Link Statistics
 DHDCFLAGS += -DLINKSTAT_SUPPORT
 
@@ -141,7 +141,7 @@ ifneq ($(CONFIG_BCMDHD_SDIO),)
   DHDCFLAGS += -DMAX_HDR_READ=128
   DHDCFLAGS += -DDHD_FIRSTREAD=128
 
-  DHDCFLAGS += -DSAR_SUPPORT
+#  DHDCFLAGS += -DSAR_SUPPORT
 endif
 
 ifneq ($(CONFIG_BCMDHD_PCIE),)
@@ -183,7 +183,7 @@ endif
 
 ifeq ($(DRIVER_TYPE),y)
   DHDCFLAGS += -DENABLE_INSMOD_NO_FW_LOAD
-  DHDCFLAGS += -DUSE_LATE_INITCALL_SYNC
+#  DHDCFLAGS += -DUSE_LATE_INITCALL_SYNC
 endif
 
 EXTRA_CFLAGS += $(DHDCFLAGS) -DDHD_DEBUG
