arm/dts: shamu: enable sar control
Enable MMI SAR control for Shamu program

Change-Id: I5f2e6add46a385faede149f2c1fdccb7e32731b4
Signed-off-by: Andrey Gostev <fga022c@motorola.com>

--- a/arch/arm/boot/dts/apq8084-shamu/apq8084-shamu.dtsi
+++ b/arch/arm/boot/dts/apq8084-shamu/apq8084-shamu.dtsi
@@ -117,6 +117,10 @@
 		interrupts = <67 0>;
 		interrupt-names = "host_wake";
 	};
+
+	mmi_sar_ctrl {
+		compatible = "mmi,mmi_sar_ctrl";
+	};
 };
 
 &pma8084_gpios {
