misc: mmi: initial version of SAR control platform driver
MMI SAR control driver provides unified interface for user space
components to reduce max TX power of WLAN module.

Change-Id: Ib4a43fe7a4c4e2daa4ebd24d282febe3c2f6f9f9
Signed-off-by: Andrey Gostev <fga022c@motorola.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -633,6 +633,14 @@ config MMI_FACTORY
 	  say no here.
 	default n
 
+config MMI_SAR
+	tristate "Motorola Mobility SAR driver"
+	help
+	  This option enables MMI-SAR device driver that provides interface
+	  to control max TX power and sends notifications to other kernel
+	  components when SAR cutback has to be applied.
+	default n
+
 config ALSA_TO_H2W
 	tristate "ALSA to H2W wired headset detection converter"
 	help
