--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -68,5 +68,6 @@ obj-$(CONFIG_C55_CTRL) += c55_ctrl.o
 obj-$(CONFIG_SENSORS_STM401) += stm401/
 obj-$(CONFIG_ALSA_TO_H2W) += alsa-to-h2w-headset.o
 obj-$(CONFIG_MMI_FACTORY) += mmi-factory.o
+obj-$(CONFIG_MMI_SAR) += mmi-sar.o
 obj-$(CONFIG_CYPRESS_CAPSENSE_PROGRAMMING)	+= capsense_prog/
 
