shamu_defconfig: Enable MMI_SAR
Enable MMI SAR control platform driver for Shamu

Change-Id: If86c80ee8658bf0491887beed2ced81e06b00f82
Signed-off-by: Andrey Gostev <fga022c@motorola.com>

--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -251,6 +251,7 @@ CONFIG_APQ8084_DOCKING_STATION=y
 CONFIG_HAPTIC_DRV2605=y
 CONFIG_C55_CTRL=y
 CONFIG_MMI_FACTORY=y
+CONFIG_MMI_SAR=y
 CONFIG_ALSA_TO_H2W=y
 CONFIG_CYPRESS_CAPSENSE_PROGRAMMING=y
 CONFIG_SCSI=y
