--- a/arch/arm/boot/dts/msm8610-otus-common.dtsi
+++ b/arch/arm/boot/dts/msm8610-otus-common.dtsi
@@ -15,6 +15,7 @@
 /include/ "msm8610-moto-common.dtsi"
 /include/ "msm8610-otus-gpiomux.dtsi"
 /include/ "dsi-panel-mot-boe-450-qHD-video.dtsi"
+/include/ "dsi-panel-mot-inx-450-qHD-video.dtsi"
 
 &mmi_factory {
 	/delete-property/ gpios;
@@ -113,6 +114,33 @@
 		qcom,supply-post-off-sleep = <1>;
 	};
 };
+
+&mot_inx_450_qhd_vid_v0 {
+	qcom,cont-splash-enabled;
+	qcom,platform-supply-entry1 {
+		qcom,supply-name = "lcd_vci";
+		qcom,supply-min-voltage = <2850000>;
+		qcom,supply-max-voltage = <2850000>;
+		qcom,supply-enable-load = <300000>;
+		qcom,supply-disable-load = <100>;
+		qcom,supply-pre-on-sleep = <0>;
+		qcom,supply-post-on-sleep = <0>;
+		qcom,supply-pre-off-sleep = <0>;
+		qcom,supply-post-off-sleep = <0>;
+	};
+	qcom,platform-supply-entry2 {
+		qcom,supply-name = "vddio_disp";
+		qcom,supply-min-voltage = <1800000>;
+		qcom,supply-max-voltage = <1800000>;
+		qcom,supply-enable-load = <300000>;
+		qcom,supply-disable-load = <100>;
+		qcom,supply-pre-on-sleep = <0>;
+		qcom,supply-post-on-sleep = <10>;
+		qcom,supply-pre-off-sleep = <0>;
+		qcom,supply-post-off-sleep = <1>;
+	};
+};
+
 
 &i2c_3 {
 	status = "disabled";
