arm/dt: lenok: apply fade-in to improve blinking issue
Change-Id: Ibbe1d20b3562c58277fa4a3d259b4f5d9759a242
Signed-off-by: choongryeol.lee <choongryeol.lee@lge.com>
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/arch/arm/boot/dts/apq8026-lenok/apq8026-lenok-panel.dtsi
+++ b/arch/arm/boot/dts/apq8026-lenok/apq8026-lenok-panel.dtsi
@@ -75,11 +75,91 @@
 		qcom,mdss-dsi-idle-on-command = [
 					39 00 00 00 00 00 03 51 00 00 /*DBV Setting*/
 					39 00 00 00 00 00 18 DB
-					00 A9 30 93 FF 11
+					01 A9 00 92 FF 11
 					1C 34 43 2F 84 85
 					40 65 27 28 12 12
-					12 00 00 29 10 /*40nit_60hz*/
+					12 00 00 29 10 /*40nit_30hz*/
 					05 01 00 00 80 00 01 39 /*Idle Mode On*/
+					05 01 00 00 40 00 01 29 /*Display On*/
+
+					39 01 00 00 20 00 18 DB
+					01 A9 40 92 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 30 00 18 DB
+					01 A9 60 92 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 30 00 18 DB
+					01 A9 80 92 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 30 00 18 DB
+					01 A9 A0 92 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 30 00 18 DB
+					01 A9 C0 92 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 20 00 18 DB
+					01 A9 E0 92 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 20 00 18 DB
+					01 A9 00 93 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 20 00 18 DB
+					01 A9 10 93 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 20 00 18 DB
+					01 A9 20 93 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 20 00 18 DB
+					01 A9 30 93 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 10 00 18 DB
+					01 A9 40 93 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 10 00 18 DB
+					01 A9 50 93 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
+					39 01 00 00 10 00 18 DB
+					01 A9 60 93 FF 11
+					1C 34 43 2F 84 85
+					40 65 27 28 12 12
+					12 00 00 29 10 /*40nit_30hz*/
+
 					39 01 00 00 00 00 18 DB
 					01 A9 80 93 FF 11
 					1C 34 43 2F 84 85
@@ -108,7 +188,7 @@
 		qcom,mdss-dsi-panel-timings = [40 1A 11 00 28 28 16 1C 1F 03 04 00];
 		qcom,mdss-dsi-t-clk-post = <0x20>;
 		qcom,mdss-dsi-t-clk-pre = <0x27>;
-		qcom,mdss-dsi-bl-min-level = <1>;
+		qcom,mdss-dsi-bl-min-level = <0>;
 		qcom,mdss-dsi-bl-max-level = <255>;
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
@@ -118,7 +198,7 @@
 		qcom,cont-splash-enabled;
 		qcom,ulps-enabled;
 		qcom,blmap = /bits/ 8 <
-			1 1 1 1 1 1 1 1 1 1                         /* 0-9 */
+			0 0 0 0 1 1 1 1 1 1                         /* 0-9 */
 			1 7 14 15 16 17 18 19 20 21                 /* 10-19 */
 			22 23 24 25 26 26 27 28 29 30               /* 20-29 */
 			31 32 33 34 35 36 37 38 39 40               /* 30-39 */
