anthias: usb: remove EHCI from kernel config
Change-Id: I72e884caaefdd6510e76b90958a7a7e2e9149987
Reviewed-on: http://mcrd1-22-pc.corpnet.asus/code-review/master/143669
Reviewed-by: JimmyLin <jimmy1_lin@asus.com>
Tested-by: JimmyLin <jimmy1_lin@asus.com>

--- a/arch/arm/configs/WI500Q_User_msm8226-perf_defconfig
+++ b/arch/arm/configs/WI500Q_User_msm8226-perf_defconfig
@@ -340,10 +340,10 @@ CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_MON=y
-CONFIG_USB_EHCI_HCD=y
-CONFIG_USB_EHCI_EHSET=y
-CONFIG_USB_EHCI_MSM=y
-CONFIG_USB_EHCI_MSM_HSIC=y
+# CONFIG_USB_EHCI_HCD is not set
+# CONFIG_USB_EHCI_EHSET is not set
+# CONFIG_USB_EHCI_MSM is not set
+# CONFIG_USB_EHCI_MSM_HSIC is not set
 CONFIG_USB_ACM=y
 CONFIG_USB_CCID_BRIDGE=y
 CONFIG_USB_STORAGE=y
