arm/dt: 8x10: Add supplier string to panel dts file.
Add a entry for supplier name in panel dts file

Change-Id: I15285d7d716ec5b42f86c620d5d3a257ff3af6aa
Signed-off-by: Ashwin Pathmudi <jfxr63@motorola.com>
Reviewed-on: http://gerrit.mot.com/668077
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Zachary Crosby <zac@motorola.com>
Reviewed-by: Alexander Filonenko <alexf@motorola.com>
Reviewed-by: Varun Shrivastava <varunshrivastava@motorola.com>
Reviewed-by: Stephen Rossbach <rossbach@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>
SLTApproved: Robert Neely <wrn002@motorola.com>

--- a/arch/arm/boot/dts/dsi-panel-mot-boe-450-qHD-video.dtsi
+++ b/arch/arm/boot/dts/dsi-panel-mot-boe-450-qHD-video.dtsi
@@ -20,6 +20,7 @@
 		qcom,panel-esd-power-mode-chk = <0x9C>;
 
 		qcom,mdss-dsi-panel-name = "mipi_mot_video_boe_qhd_450_v2";
+		qcom,mdss-dsi-panel-supplier = "boe";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-type = "dsi_video_mode";
 		qcom,mdss-dsi-panel-destination = "display_1";
@@ -108,6 +109,7 @@
 		qcom,panel-esd-power-mode-chk = <0x9C>;
 
 		qcom,mdss-dsi-panel-name = "mipi_mot_video_boe_qhd_450_v1";
+		qcom,mdss-dsi-panel-supplier = "boe";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-type = "dsi_video_mode";
 		qcom,mdss-dsi-panel-destination = "display_1";
@@ -195,6 +197,7 @@
 		qcom,panel-esd-power-mode-chk = <0x9C>;
 
 		qcom,mdss-dsi-panel-name = "mipi_mot_video_boe_qhd_450_v0";
+		qcom,mdss-dsi-panel-supplier = "boe";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-type = "dsi_video_mode";
 		qcom,mdss-dsi-panel-destination = "display_1";
