crypto: msm: Disable the second crypto instance
Currently TrustZone handles the clock voting for qcrypto1 directly
and thus this causes failures when the kernel performs redundant
clock operations.

Disable the second instance as it is not being used in shamu

Bug: 16159480
Change-Id: Ic1a5ddbff4b39ba148b3f3484d72eb634afbda8d
Signed-off-by: Naveen Ramaraj <nramaraj@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/apq8084.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084.dtsi
@@ -695,6 +695,7 @@
 	};
 
 	qcom,qcrypto1@fd440000 {
+		status = "disabled";
 		compatible = "qcom,qcrypto";
 		reg = <0xfd440000 0x20000>,
 		      <0xfd444000 0x1b000>;
