shamu_defconfig: Clean up panic options
- Don't panic on recoverable cache errors
- Don't wait 5 seconds before finishing a panic
- Don't panic on data corruption

Signed-off-by: Chris Fries <cfries@motorola.com>

--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -143,7 +143,7 @@ CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
 CONFIG_HOTPLUG=y
-CONFIG_PANIC_TIMEOUT=5
+CONFIG_PANIC_TIMEOUT=1
 CONFIG_EXPERT=y
 CONFIG_UID16=y
 # CONFIG_SYSCTL_SYSCALL is not set
@@ -409,16 +409,15 @@ CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
 # CONFIG_SENSORS_ADSP is not set
 CONFIG_MSM_CACHE_ERP=y
 CONFIG_MSM_L1_ERR_PANIC=y
-CONFIG_MSM_L1_RECOV_ERR_PANIC=y
+# CONFIG_MSM_L1_RECOV_ERR_PANIC is not set
 CONFIG_MSM_L1_ERR_LOG=y
 CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS=y
-CONFIG_MSM_L2_ERP_PORT_PANIC=y
-CONFIG_MSM_L2_ERP_1BIT_PANIC=y
+# CONFIG_MSM_L2_ERP_PORT_PANIC is not set
+# CONFIG_MSM_L2_ERP_1BIT_PANIC is not set
 CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 # CONFIG_MSM_CPR is not set
 CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
-CONFIG_MSM_CACHE_DUMP=y
-CONFIG_MSM_CACHE_DUMP_ON_PANIC=y
+# CONFIG_MSM_CACHE_DUMP is not set
 CONFIG_MSM_HSIC_SYSMON=y
 # CONFIG_MSM_HSIC_SYSMON_TEST is not set
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
@@ -3626,7 +3625,7 @@ CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
-CONFIG_PANIC_ON_DATA_CORRUPTION=y
+# CONFIG_PANIC_ON_DATA_CORRUPTION is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
