msm8994_defconfig: Enable MMI_FACTORY driver
Turn on the driver to support MMI Factory use cases, specifically the
KungPow hardware reset.

Change-Id: Iffdf6f6e4dfafd17f7d18516181da68857013ab7
Signed-off-by: Jason Hrycay <jason.hrycay@motorola.com>

--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -224,6 +224,7 @@ CONFIG_QCOM_LIQUID_DOCK=y
 CONFIG_HAPTIC_DRV2605=y
 CONFIG_C55_CTRL=y
 CONFIG_SENSORS_STM401=y
+CONFIG_MMI_FACTORY=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
