--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -224,7 +224,7 @@ CONFIG_TI_DRV2667=y
 CONFIG_QCOM_LIQUID_DOCK=y
 CONFIG_HAPTIC_DRV2605=y
 CONFIG_C55_CTRL=y
-CONFIG_SENSORS_STM401=y
+# CONFIG_SENSORS_STM401 is not set
 CONFIG_MMI_FACTORY=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
