IKQCOMSD1-2616 defconfig: 8994: Enable DROPBOX
Enable the dropbox driver to allow consumers to post log events to
userspace to toss into dropbox.

Change-Id: I6a262acb88d16f39a3324376aeb6176d5dfa0f50
Signed-off-by: Jason Hrycay <jason.hrycay@motorola.com>

--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -226,6 +226,7 @@ CONFIG_HAPTIC_DRV2605=y
 CONFIG_C55_CTRL=y
 # CONFIG_SENSORS_STM401 is not set
 CONFIG_MMI_FACTORY=y
+CONFIG_DROPBOX=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
