IKQCBP-2437 msm8994_defconfig: Enable HOB RAM driver
Change-Id: Ieaa51ecea264e8bc9081f0b2f9026061ce41c8d0
Signed-off-by: Andrey Volkov <aav014@motorola.com>
Reviewed-on: http://gerrit.mot.com/682267
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -676,3 +676,4 @@ CONFIG_JOYSTICK_XPAD=y
 CONFIG_QCOM_NPA_DUMP=y
 CONFIG_KERNEL_TEXT_MPU_PROT
 CONFIG_MSM_CORE_CTL_HELPER=y
+CONFIG_HOB_SHARED_RAM=y
