arm64: configs: enable utags for 8994
Enable utag support in 8994 kernel.

Change-Id: I7c5e796851a66b34b21c86b3424bedc052a46456
Signed-off-by: Dmitry Ornatsky <cdo021c@motorola.com>
Reviewed-on: http://gerrit.mot.com/688616
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -218,6 +218,7 @@ CONFIG_ARM_CCI=y
 CONFIG_PROC_DEVICETREE=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
+CONFIG_MOT_UTAG=y
 CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
 CONFIG_TI_DRV2667=y
