msm8994_defconfig: Enable KEYCHORD driver
Enable the keychord driver to handle specific key press events for
userspace application.

Change-Id: I6847a047bd15cbce24c48a80706e32a001d5d929
Signed-off-by: Jason Hrycay <jason.hrycay@motorola.com>

--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -276,6 +276,7 @@ CONFIG_R8169=y
 CONFIG_E1000E=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_EVBUG=m
+CONFIG_INPUT_KEYCHORD=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
