msm8994_defconfig: Initial sensor bring-up for STML4/msm8994
 - enable moto-sensorhub

Change-Id: I520459566bee2dcf4ea9820a8ad71645f45c00ea
Signed-off-by: Eric Hefner <ehefner@motorola.com>
Reviewed-on: http://gerrit.mot.com/702812
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Christopher Fries <cfries@motorola.com>
Reviewed-by: James Rumpler <w12004@motorola.com>
Reviewed-by: Scott Debates <scottdebates@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -229,7 +229,7 @@ CONFIG_TI_DRV2667=y
 CONFIG_QCOM_LIQUID_DOCK=y
 CONFIG_HAPTIC_DRV2605=y
 CONFIG_C55_CTRL=y
-# CONFIG_SENSORS_STM401 is not set
+CONFIG_SENSORS_MOTOSH=y
 CONFIG_MMI_FACTORY=y
 CONFIG_DROPBOX=y
 CONFIG_SCSI=y
