--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -226,11 +226,13 @@ CONFIG_MOT_UTAG=y
 CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
 CONFIG_TI_DRV2667=y
-CONFIG_QCOM_LIQUID_DOCK=y
+CONFIG_QCOM_LIQUID_DOCK is not set
+CONFIG_MMI_SLICE_ACCESSORY=y
 CONFIG_HAPTIC_DRV2605=y
 CONFIG_C55_CTRL=y
 CONFIG_SENSORS_MOTOSH=y
 CONFIG_MMI_FACTORY=y
+CONFIG_EEPROM_AT24=y
 CONFIG_DROPBOX=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
