--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -412,6 +412,7 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 CONFIG_FB_MSM_MDSS_MHL3=y
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=n
+CONFIG_MDSS_QUICKDRAW=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=y
