--- a/arch/arm/boot/dts/qcom/msm8226-mdss-panels.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8226-mdss-panels.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2013-2015, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2013-2014, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -18,4 +18,6 @@
 #include "dsi-panel-ssd2080m-720p-video.dtsi"
 #include "dsi-panel-jdi-1080p-video.dtsi"
 #include "dsi-panel-nt35590-qvga-cmd.dtsi"
-#include "dsi-panel-auo-qvga-cmd.dtsi"
+/*lcd dts*/
+#include "dsi-panel-edo-rm67160-hvga-video.dtsi"
+#include "dsi-panel-auo-rm69080-hvga-video.dtsi"
