arm64/config: 8994: Enable ALSA-H2W config
Add the ALSA-H2W driver so we can read the headset state during factory
testing.

Change-Id: I0e71326f87d1064999f60de6deec60eb7e8fed5e
Signed-off-by: Jason Hrycay <jason.hrycay@motorola.com>

--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -231,6 +231,7 @@ CONFIG_MMI_SLICE_ACCESSORY=y
 CONFIG_HAPTIC_DRV2605=y
 CONFIG_SENSORS_MOTOSH=y
 CONFIG_MMI_FACTORY=y
+CONFIG_ALSA_TO_H2W=y
 CONFIG_EEPROM_AT24=y
 CONFIG_DROPBOX=y
 CONFIG_SCSI=y
