--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -1,6 +1,7 @@
 CONFIG_LOCALVERSION="-perf"
 CONFIG_ZRAM=y
 CONFIG_ZSMALLOC=y
+CONFIG_BOOTINFO=y
 CONFIG_SYSVIPC=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -45,6 +46,10 @@ CONFIG_ARCH_MSM8994_V1_TLBI_WA=y
 CONFIG_ARCH_MSM8992=y
 CONFIG_PCI_MSM=y
 CONFIG_ARM64_A57_ERRATA_832075=y
+CONFIG_MMI_SOC_INFO=y
+CONFIG_MMI_RAM_INFO=y
+CONFIG_MMI_UNIT_INFO=y
+CONFIG_CYPRESS_CAPSENSE_HSSP=y
 CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 CONFIG_PREEMPT=y
@@ -59,6 +64,7 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_RUNTIME=y
 CONFIG_PM_OPP=y
 CONFIG_SUSPEND_TIME=y
+CONFIG_SUSPEND_TIME_TIMEKEEPING=y
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
@@ -196,28 +202,32 @@ CONFIG_RMNET_DATA=y
 CONFIG_RMNET_DATA_FC=y
 CONFIG_RMNET_DATA_DEBUG_PKT=y
 CONFIG_BT=y
-CONFIG_BT_RFCOMM=y
-CONFIG_BT_RFCOMM_TTY=y
-CONFIG_BT_BNEP=y
-CONFIG_BT_BNEP_MC_FILTER=y
-CONFIG_BT_BNEP_PROTO_FILTER=y
-CONFIG_BT_HIDP=y
 CONFIG_MSM_BT_POWER=y
 CONFIG_CFG80211=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
 CONFIG_NFC_QNCI=y
 # CONFIG_NFC_NQ is not set
+CONFIG_BCM2079X=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_CMA=y
 CONFIG_CMA_SIZE_MBYTES=64
 CONFIG_ARM_CCI=y
+CONFIG_PROC_DEVICETREE=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
+CONFIG_MOT_UTAG=y
 CONFIG_QSEECOM=y
 CONFIG_TI_DRV2667=y
-CONFIG_QCOM_LIQUID_DOCK=y
+CONFIG_QCOM_LIQUID_DOCK is not set
+CONFIG_MMI_SLICE_ACCESSORY=y
+CONFIG_HAPTIC_DRV2605=y
+CONFIG_SENSORS_MOTOSH=y
+CONFIG_MMI_FACTORY=y
+CONFIG_ALSA_TO_H2W=y
+CONFIG_EEPROM_AT24=y
+CONFIG_DROPBOX=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
@@ -260,13 +270,16 @@ CONFIG_WIL6210=m
 CONFIG_E1000E=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_EVBUG=m
+CONFIG_INPUT_KEYCHORD=y
 CONFIG_KEYBOARD_GPIO=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING is not set
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_MMI=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_SECURE_TOUCH=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v21=y
-CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH_TS=y
+# CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH_TS is not set
+CONFIG_TOUCHSCREEN_ATMEL_MXT_MMI=y
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
@@ -276,6 +289,7 @@ CONFIG_INPUT_GPIO=m
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_SMD=y
 CONFIG_DIAG_CHAR=y
+CONFIG_DIAG_OVER_TTY=y
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM=y
 CONFIG_MSM_SMD_PKT=y
@@ -300,14 +314,17 @@ CONFIG_GPIO_QPNP_PIN=y
 CONFIG_SMB135X_CHARGER=y
 CONFIG_SMB349_DUAL_CHARGER=y
 CONFIG_QPNP_SMBCHARGER=y
+CONFIG_SMB1351_USB_CHARGER=y
 CONFIG_QPNP_FG=y
 CONFIG_BATTERY_BCL=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
+CONFIG_MMI_WLS_CHARGER=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_MSM_DLOAD_MODE=y
 CONFIG_MSM_PM=y
 CONFIG_APSS_CORE_EA=y
+CONFIG_SENSORS_LM75=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_TSENS8974=y
@@ -317,10 +334,12 @@ CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
 CONFIG_WCD9330_CODEC=y
+CONFIG_BACKLIGHT_LM3631=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
 CONFIG_REGULATOR_MEM_ACC=y
+CONFIG_REGULATOR_LM3631=y
 CONFIG_REGULATOR_TPS65132=y
 CONFIG_REGULATOR_STUB=y
 CONFIG_REGULATOR_RPM_SMD=y
@@ -363,6 +382,8 @@ CONFIG_FB=y
 CONFIG_FB_MSM=y
 CONFIG_FB_MSM_MDSS=y
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
+CONFIG_BACKLIGHT_LCD_SUPPORT=y
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 CONFIG_FB_MSM_MDSS_MHL3=y
 CONFIG_SOUND=y
@@ -370,6 +391,27 @@ CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MSM8994=y
+CONFIG_SND_SOC_FSA8500=y
+CONFIG_SND_SOC_TFA9890=y
+
+CONFIG_SLIMBUS=y
+CONFIG_OF_SLIMBUS=y
+CONFIG_GPIO_ARIZONA=y
+CONFIG_MFD_ARIZONA=y
+CONFIG_MFD_ARIZONA_SPI=y
+CONFIG_REGULATOR_ARIZONA=y
+CONFIG_SND_SOC_ARIZONA=y
+CONFIG_MFD_FLORIDA=y
+CONFIG_SND_SOC_FLORIDA=y
+CONFIG_MFD_CORE=y
+CONFIG_MFD_TI_LMU=y
+CONFIG_SPI_MASTER=y
+CONFIG_REGMAP=y
+CONFIG_REGMAP_SPI=y
+CONFIG_REGMAP_IRQ=y
+CONFIG_LZO_COMPRESS=y
+CONFIG_LZO_DECOMPRESS=y
+
 CONFIG_UHID=y
 CONFIG_HID_APPLE=y
 CONFIG_HID_ELECOM=y
@@ -419,9 +461,9 @@ CONFIG_MMC_BLOCK_TEST=m
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
+CONFIG_LEDS_ISL98611=y
 CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_QPNP_FLASH=y
-CONFIG_LEDS_QPNP_WLED=y
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_BACKLIGHT=y
 CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
@@ -510,6 +552,7 @@ CONFIG_MSM_SCM=y
 CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
+CONFIG_MMI_DEVICE_DTBS=y
 CONFIG_ESD_FS=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
@@ -521,6 +564,10 @@ CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
+CONFIG_PSTORE=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_RAM=y
+CONFIG_F2FS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
@@ -568,7 +615,9 @@ CONFIG_DEVFREQ_SPDM=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_CONSOLE_FLUSH_ON_HOTPLUG=y
 CONFIG_INPUT_JOYSTICK=y
+CONFIG_HOB_SHARED_RAM=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_QCOM_NPA_DUMP=y
 CONFIG_KERNEL_TEXT_MPU_PROT=y
 CONFIG_MSM_CORE_CTL_HELPER=y
+CONFIG_HOB_SHARED_RAM=y
