--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -510,6 +510,7 @@ CONFIG_MSM_SCM=y
 CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
+CONFIG_ESD_FS=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT3_FS=y
