IKQCOMSD1-2854: Revert "defconfig: Reduce the size of the default CMA heap to 16MB"
This reverts commit b92666d2d2f3b9d8daf073ca5c6ba2cf155d20c8.

It causes touch not responsive in some case cause DMA alloc failed.
=======
<3>[ 1483.297096,0] i2c-msm-v2 f9924000.i2c: error alloc 392 bytes of DMAable memory for DMA tags space
<3>[ 1483.304998,0] i2c-msm-v2 f9924000.i2c: DMA Init Failed: -12
<3>[ 1483.310879,0] synaptics_dsx_i2c 2-0020: synaptics_rmi4_i2c_read: I2C retry 1
<3>[ 1483.457038,0] i2c-msm-v2 f9924000.i2c: error alloc 392 bytes of DMAable memory for DMA tags space
<3>[ 1483.464943,0] i2c-msm-v2 f9924000.i2c: DMA Init Failed: -12
<3>[ 1483.470854,0] synaptics_dsx_i2c 2-0020: synaptics_rmi4_i2c_read: I2C retry 2
<3>[ 1483.617613,0] i2c-msm-v2 f9924000.i2c: error alloc 392 bytes of DMAable memory for DMA tags space
<3>[ 1483.625642,0] i2c-msm-v2 f9924000.i2c: DMA Init Failed: -12
<3>[ 1483.631426,0] synaptics_dsx_i2c 2-0020: synaptics_rmi4_i2c_read: I2C retry 3
<3>[ 1483.777049,0] i2c-msm-v2 f9924000.i2c: error alloc 392 bytes of DMAable memory for DMA tags space
<3>[ 1483.785094,0] i2c-msm-v2 f9924000.i2c: DMA Init Failed: -12
<3>[ 1483.790867,0] synaptics_dsx_i2c 2-0020: synaptics_rmi4_i2c_read: I2C retry 4
<3>[ 1483.937137,0] i2c-msm-v2 f9924000.i2c: error alloc 392 bytes of DMAable memory for DMA tags space
=======
Signed-off-by: Yinjun Chen <a7301c@motorola.com>

Change-Id: If5a83242f02e89616c3427f0079653b96d0e4212

--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -219,6 +219,7 @@ CONFIG_BCM2079X=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_CMA=y
+CONFIG_CMA_SIZE_MBYTES=64
 CONFIG_ARM_CCI=y
 CONFIG_PROC_DEVICETREE=y
 CONFIG_BLK_DEV_LOOP=y
