sec: enable sec kernel driver
enable security driver (read fuses)

Signed-off-by: Mark Reed <mreed@motorola.com>
Change-Id: I82aa206d657f9d06d48ba919c9d4731bc9b4adb9
Reviewed-on: http://gerrit.mot.com/722872
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
SME-Granted: Gerrit Application <gerritmailarchive@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -227,6 +227,7 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_MOT_UTAG=y
 CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
+CONFIG_SEC_DRIVER=y
 CONFIG_TI_DRV2667=y
 CONFIG_QCOM_LIQUID_DOCK is not set
 CONFIG_MMI_SLICE_ACCESSORY=y
