--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -224,6 +224,7 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
+CONFIG_SEC_DRIVER=y
 CONFIG_TI_DRV2667=y
 CONFIG_QCOM_LIQUID_DOCK=y
 CONFIG_SCSI=y
